tests/ui/closures/add_semicolon_non_block_closure.stderr
error[E0308]: mismatched types
  --> $DIR/add_semicolon_non_block_closure.rs:8:12
   |
LL |     foo(|| bar())
   |            ^^^^^ expected `()`, found `i32`
   |
help: consider using a semicolon here
   |
LL |     foo(|| { bar(); })
   |            +      +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
